--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Airwallex PHP SDK",
   "type": "library",
   "license": "MIT",
-  "version": "5.12.0",
+  "version": "1.0.0",
   "require": {
     "php": "^7.2|^8.0",
     "ext-json": "*",
@@ -20,7 +20,8 @@
     "fakerphp/faker": "^1.13",
     "phpstan/phpstan": "^0.12.23",
     "php-http/message": "^1.14",
-    "php-http/message-factory": "^1.1"
+    "php-http/message-factory": "^1.1",
+    "squizlabs/php_codesniffer": "^3.8"
   },
   "autoload": {
     "psr-4": {
@@ -39,8 +40,6 @@
     }
   },
   "scripts": {
-    "phpcs": "@php vendor/bin/phpcs --standard=phpcs.ruleset.xml .",
-    "phpcbf": "@php vendor/bin/phpcbf --standard=phpcs.ruleset.xml .",
     "phpunit": "@php vendor/bin/phpunit"
   }
 }
