--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
   "license": "MIT",
   "version": "1.0.0",
   "require": {
-    "php": "^7.2|^8.0",
     "ext-json": "*",
     "psr/http-client-implementation": "^1.0",
     "psr/http-message-implementation": "^1.0",
     "psr/http-factory-implementation": "^1.0",
+    "laravel/framework": "~9.0||~10.0||~11.0",
     "php-http/discovery": "^1.0"
   },
   "require-dev": {
@@ -21,6 +21,7 @@
     "phpstan/phpstan": "^0.12.23",
     "php-http/message": "^1.14",
     "php-http/message-factory": "^1.1",
+    "laravel/framework": "~9.0||~10.0||~11.0",
     "squizlabs/php_codesniffer": "^3.8"
   },
   "autoload": {
